# NewOpenDyllan

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: richards.md
compiler/: .gitignore  README.md  dylan-c3.dylan  dylan-lex-shim.dylan  dylan-lex-shim.prj  dylan-lexer-main.dylan  dylan-lexer.dylan  dylan-lower.dylan  dylan-macro.dylan  dylan-parser.dylan  dylan-sema.dylan  rope.dylan
data/: win32_constants.txt
docs/: ARCHITECTURE.md  COMPILER_GAPS.md  DEFERRED.md  DFM.md  DYLAN_AST_WIRE.md  DYLAN_SEMA_WIRE.md  DYLAN_TOKEN_WIRE.md  GC.md  HOW_IDE_SHELL_WORKS.md  MACROS.md  MACRO_BOUNDARY.md  MANIFESTO.md  NCL_GC_FEEDBACK.md  NEWGC_BUG_ENV_RECLAIM_ANALYSIS.md  NEWGC_BUG_ENV_RECLAIM_UNDER_CALLBACK.md  PLAN.md  PLATFORMS.md  README.md  SEALING.md  SPRINTS.md  SPRINT_45_DYLAN_LEXER.md  STDLIB_BOUNDARY.md  UPSTREAM_OPENDYLAN.md  architecture.md  gc_implementation_single_thread.md  getting-started.md  glossary.md  performance_and_harding_overview.md  tracing_guide.md
docs/compiler/: codegen.md  dfm.md  dispatch-and-sealing.md  driver.md  ffi.md  gc.md  jit-and-aot.md  macro-expander.md  namespaces.md  overview.md  reader.md  runtime.md  self-hosting.md  sema.md
docs/duim-research/: 00-synthesis.md  01-project-shape.md  02-win32-backend.md  03-bit-rot.md  04-language-features.md  05-messagebox-wndproc.md  06-callback-reentry-audit.md
docs/journal/: 2026-05-31-dylan-to-ast-translator.md  2026-05-31-flat-precedence-pragma.md  2026-05-31-front-end-self-hosting.md  2026-06-02-doccrate-manual.md  (+54 more)
src/newgc-core/: Cargo.toml  VENDOR.md
src/newgc-core/src/: crash.rs  heap_common.rs  lib.rs  lisp_layout.rs  tiny_layout.rs  traits.rs  word.rs
src/newgc-core/src/page_heap/: alloc.rs  coordinator_api.rs  cycle.rs  evac.rs  mark.rs  mod.rs  mutator.rs  page_desc.rs  pin.rs  scanner.rs  shared.rs  space.rs
src/newgc-core/tests/: card_barrier.rs  cons_elision.rs  cons_elision_repro.rs  conservative_mt.rs  gap010_major_root_rewrite.rs  gc_stats.rs  large_object.rs  loom_safepoint.rs  mutator_handle.rs  native_call.rs  pin_api.rs  safepoint.rs  stochastic_workload.rs  stress_mt.rs  synthetic.rs  threading.rs  tiny_layout_endtoend.rs  tlab.rs  torture_mt.rs  trigger_policy.rs  try_collect.rs  workloads.rs
src/nod-aot-stub/: Cargo.toml
src/nod-aot-stub/src/: lib.rs
src/nod-driver/: Cargo.toml  build.rs
src/nod-driver/src/: dylan_lex_jit.rs  dylan_parse_check.rs  dylan_parse_wire.rs  dylan_to_ast.rs  main.rs  project.rs
src/nod-dylan/: Cargo.toml
src/nod-dylan/dylan-sources/: README.md  stdlib.dylan  win32-constants.dylan
src/nod-dylan/dylan-sources/stdlib/: collections.dylan  functional.dylan  macros.dylan  numbers.dylan  sequences.dylan  strings.dylan  system-classes.dylan  win32-constants.dylan
src/nod-dylan/src/: lib.rs
src/nod-llvm/: Cargo.toml
src/nod-llvm/src/: aot.rs  cache.rs  codegen.rs  jit.rs  jit_mm.rs  lib.rs  symbols.rs
src/nod-runtime/: Cargo.toml
src/nod-runtime/src/: aot.rs  aot_user_main_stub.rs  bitvectors.rs  c_types.rs  callbacks.rs  class_pins.rs  classes.rs  closures.rs  collections.rs  com_shim.rs  conditions.rs  crash_dump.rs  dispatch.rs  dylan_layout.rs  format_out.rs  functions.rs  gc_trace.rs  heap.rs  heap_common.rs  immediates.rs  lib.rs  lists.rs  make.rs  roots.rs  safepoint_poll.rs  stack_map.rs  static_area.rs  strings.rs  structs.rs  symbols.rs  tables.rs  tracer.rs  values.rs  vectors.rs  winffi.rs  word.rs  wrapper.rs
src/nod-sema/: Cargo.toml
src/nod-sema/src/: bench.rs  c3.rs  lib.rs  lower.rs  sidecar.rs  stdlib.rs
src/nod-sema/src/optimise/: dispatch.rs  facts.rs  mod.rs  narrowing.rs
src/nod-winapi/: Cargo.toml  build.rs
src/nod-winapi/src/: data_schema.rs  lib.rs
src/nod-winapi/tests/: lookup.rs
stdlib/: README.md  arrays.dylan  collections.dylan  ffi-callbacks.dylan  functional.dylan  lists.dylan  locators.dylan  macros.dylan  numbers.dylan  sequences.dylan  streams.dylan  structs.dylan  system-classes.dylan
tests/nod-od-suite/: Cargo.toml
tests/nod-od-suite/fixtures/: area-shapes.dylan  euclid-gcd.dylan  even-rec.dylan  fibonacci.dylan  gc-alloc-loop.dylan  gc-rope-file-load.dylan  point-3d-sum.dylan
tests/nod-od-suite/src/: lib.rs
tests/nod-od-suite/tests/: run.rs
tests/nod-tests/: Cargo.toml
tests/nod-tests/fixtures/: _tmp_until_loop.dylan  _tmp_when_macro.dylan  _tmp_while_loop.dylan  cond_smoke.dylan  dylan-c3-smoke.dylan  dylan-c3-smoke.prj  dylan-macro-collect.dylan  dylan-macro-collect.prj  dylan-macro-expand.dylan  dylan-macro-expand.prj  dylan-macro-file.dylan  dylan-macro-file.prj  dylan-macro-match.dylan  dylan-macro-match.prj  dylan-macro-smoke.dylan  dylan-macro-smoke.prj  dylan-macro-walk.dylan  dylan-macro-walk.prj  dylan-sema.prj  expand-pipeline-smoke.dylan  factorial.dylan  factorial.prj  gap-007-repro-ir.dylan  gap-007-repro.dylan  gap011-jcs-min-crash.dylan  gap011-repro.dylan  gap011-repro2.dylan  gc_loop_accum.dylan  gc_precise_two_makes.dylan  gc_precise_two_makes_ir.dylan  hello.dylan  ide_helpers.dylan  ide_rope.dylan  ide_syntax.dylan  ide_win_calls.dylan  jit_cache_sample.dylan  jit_cache_sample_items.dylan  kernel-arith.dylan  lower-begin.dylan  lower-class-accessors.dylan  (+24 more)
tests/nod-tests/src/: lib.rs
tests/nod-tests/tests/: aot_com.rs  aot_dylan.rs  aot_exe.rs  aot_ide_shell.rs  aot_multifile.rs  aot_object_emission.rs  aot_win32.rs  bench_richards.rs  bench_richards_ir_dump.rs  byte_string_ops.rs  c3_oracle.rs  c_function_call.rs  c_function_parse.rs  class_pin_stability.rs  classes.rs  classes_dumps.rs  closures.rs  codegen.rs  collections.rs  conditions.rs  dispatch.rs  dylan_lexer.rs  dylan_parse_coverage.rs  dylan_parse_translate.rs  dylan_parser.rs  first_class_functions.rs  funcall_arity.rs  gap_007_stale_locals.rs  gc.rs  gc_callback_env.rs  gc_precise.rs  gc_stress.rs  generic_function_ref.rs  heap_objects.rs  ide_shell.rs  ide_shell_infra.rs  jit_cache.rs  jit_cache_xprocess.rs  jit_cache_xprocess_eval.rs  lexer_oracle.rs  (+32 more)
tools/: self-rebuild.ps1  self-rebuild.sh  smoke-aot.sh
(+78 files in other folders)
