[workspace]
members = [
    "src/nod-driver",
    "src/nod-reader",
    "src/nod-macro",
    "src/nod-namespace",
    "src/nod-sema",
    "src/nod-dfm",
    "src/nod-opt",
    "src/nod-llvm",
    "src/nod-loader",
    "src/nod-runtime",
    "src/nod-aot-stub",
    "src/nod-dylan",
    "src/nod-winapi",
    "src/newgc-core",
    "tests/nod-tests",
    "tests/nod-od-suite",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.0.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# Shared dependencies. Versions and LLVM pinning chosen to match the
# sibling-compiler portfolio (NewM2, NewCormanLisp) so the JIT memory
# manager, GC, and codegen helpers can be lifted across projects
# without version drift. Bump in lockstep with NewM2 / NCL.
[workspace.dependencies]
clap        = { version = "4.5", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Sprint 49 — project files (`<name>.prj`) for `nod-driver build
# --project <path>`. TOML keeps the file readable for humans and
# trivially diff-able for code review; the dependency footprint is
# small (a few kB of pure Rust). Same major as Cargo's own toml
# usage so the version is well-trafficked.
toml        = { version = "0.8", features = ["parse"] }
# Sprint 06 will activate these:
inkwell     = { version = "=0.9.0", features = ["llvm22-1"] }
llvm-sys    = { version = "=221.0.1", features = ["force-static"] }
# Sprint 23: NewGC page-based mark-evacuate generational collector,
# bound into nod-runtime via the `HeapLayout` trait. `default-features
# = false` drops the conservative-pin scanner — Dylan is a precise-
# roots client via the Sprint 11c lock-free root registry.
#
# VENDORED in-tree at `src/newgc-core` (was `git file:///E:/NewGC` @ 22ec0e7).
# Refreshed to NewGC HEAD 15b50c6986057f8e03ee4c8d1fa3598e85ca4821 ("Fix
# conservatively-pinned objects' children dropped in the bare collect path")
# via `git archive`. This pulls three Lisp-team GC fixes past the old pin
# (9b960c3 byte-string card-scan, 6d1a799 cons-elision pin promotion,
# 15b50c6 conservative-pin children). We build `default-features = false`
# (conservative-pin compiled out), so the headline fix likely doesn't affect
# us, but they're proven fixes and the card/evac changes are relevant to the
# GAP-011 investigation. We now own the source so we can add GC-collection
# tracing (the `gc-trace` feature) and fix GAP-011 directly. Re-sync: re-
# `git archive` a new rev over `src/newgc-core`, re-run gates. Provenance in
# src/newgc-core/VENDOR.md.
newgc-core  = { path = "src/newgc-core", default-features = false }
