[package]
name = "newgc-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Page-based mark-evacuate generational GC, extracted from NewCormanLisp's page-heap"

[features]
default = ["conservative-pin"]
# Conservative stack-pin scanner. Required by clients that can't
# enumerate precise roots (typical for tree-walking interpreters or
# JITs without statepoint stack maps). Costs ~450 lines of code,
# one extra HashSet on `PageHeap`, and a per-cycle scan when the
# client invokes it.
#
# Disable for precise-root-only clients (e.g. OpenDylan with
# `gc.statepoint`) to compile the pin machinery out entirely:
#   cargo build --no-default-features
conservative-pin = []

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# MM-8: loom model checking of the safepoint handshake. Pulled in ONLY
# under `--cfg loom`, so a normal `cargo build`/`cargo test` never resolves
# or fetches it. Run the models with:
#   RUSTFLAGS="--cfg loom" cargo test -p newgc-core --test loom_safepoint
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints]
workspace = true
