[package]
name        = "nod-sema"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan: AST -> DFM lowering, type estimates, sealing analysis."

[features]
# Sprint 23: forward GC backend selection from `nod-runtime` via
# `nod-llvm`. Same shape as the other crates that depend on
# `nod-runtime`.
default = ["newgc-backend"]
newgc-backend = ["nod-runtime/newgc-backend", "nod-llvm/newgc-backend"]
semispace-backend = ["nod-runtime/semispace-backend", "nod-llvm/semispace-backend"]

[dependencies]
nod-reader  = { path = "../nod-reader" }
nod-macro   = { path = "../nod-macro" }
nod-dfm     = { path = "../nod-dfm" }
nod-llvm    = { path = "../nod-llvm", default-features = false }
nod-runtime = { path = "../nod-runtime", default-features = false }
# Sprint 27: FFI Phase A — `define c-function` sema validates against
# the embedded `nod-winapi` index.
nod-winapi  = { path = "../nod-winapi" }
# See `nod-llvm/Cargo.toml` for the inkwell feature override rationale.
inkwell    = { version = "=0.9.0", default-features = false, features = ["llvm22-1", "target-x86"] }

[lints]
workspace = true
