[package]
name        = "nod-winapi"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan: vendored Windows API metadata for the FFI subsystem (Sprint 27)."

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }
zstd     = { version = "0.13", default-features = false }

[build-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }
zstd     = { version = "0.13", default-features = false }

[lints]
workspace = true
